# energy-dashboard-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  entity-relationship-diagram.mmd  pyproject.toml  run.py
.github/workflows/: cd.yml
api/: manage.py  run-dev.sh  run.py
api/api/: settings.py  urls.py
api/apps/carbon_intensity/: apps.py  models.py  serializers.py  tasks.py  urls.py  viewsets.py
api/apps/carbon_intensity/migrations/: 0001_initial.py
api/apps/carbon_intensity/tests/: test_api_client.py
api/apps/core/: tests.py
api/apps/core/management/commands/: fetch_generation_data.py  fetch_octopus_energy_prices.py
api/apps/core/utils/: api_clients.py  base_client.py
api/apps/national_grid_eso/: tests.py
api/apps/octopus/: apps.py  serializers.py  urls.py  viewsets.py
api/apps/petition/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
api/apps/petition/migrations/: 0001_initial.py
api/data/: Energy price cap _ Ofgem.htm
api/data/Energy price cap _ Ofgem_files/: drupal-translations-bundle.js  gtm.js  js  main-bundle.js  main.css  vit8nia.css
api/data/generationmix/: monthly_generation_averages.json
api/data/octopus_prices/: convert_days_to_quarters.py  energy_prices_gsp_B.json  energy_prices_gsp_K.json  energy_prices_gsp_M.json  energy_prices_gsp_quarters.json
k8s/: autoscaler.yaml  database.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
